--- a/Mankala/Mankala.csproj
+++ b/Mankala/Mankala.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bord.cs" />
+    <Compile Include="Kuiltje.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Speelkuiltje.cs" />
+    <Compile Include="Spel.cs" />
+    <Compile Include="Thuiskuiltje.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
