--- a/Mankala/Mankala.csproj
+++ b/Mankala/Mankala.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Bord\Bord.cs" />
     <Compile Include="Bord\Kuiltje.cs" />
+    <Compile Include="Regels\Regel.cs" />
     <Compile Include="Spel Varianten\Wari.cs" />
     <Compile Include="Spel Varianten\Mankala.cs" />
     <Compile Include="Program.cs" />
@@ -57,8 +58,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Regels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
