--- a/Mankala/Mankala.csproj
+++ b/Mankala/Mankala.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Regels\EigenLeegTegenNiet.cs" />
     <Compile Include="Regels\LeegKuiltjeTegenstander.cs" />
     <Compile Include="Regels\Regel.cs" />
+    <Compile Include="Regels\ThuisKeultje.cs" />
     <Compile Include="Regels\WariRegel.cs" />
     <Compile Include="Spel Varianten\VariantStrategy.cs" />
     <Compile Include="Spel Varianten\Wari.cs" />
