--- a/Mankala/Mankala.csproj
+++ b/Mankala/Mankala.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spel.cs" />
     <Compile Include="Spel Varianten\SpelVariant.cs" />
+    <Compile Include="User Interfaces\UI.cs" />
+    <Compile Include="User Interfaces\UI_Console.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
